Re-estructuracion de contacto.html y estilo final

--- a/index.html
+++ b/index.html
@@ -33,8 +33,71 @@
         </div>
 
     </header>
-    <main>
-
+    <main class="home">
+        <h1>Tienda</h1>
+        <p class="parrafo-home">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima, similique numquam.
+            Adipisci possimus, porro
+            dolores quos, vel rerum cupiditate ipsa perferendis vero iusto in sapiente eius reiciendis? Ratione, ab vel.
+        </p>
+        <section class="productos">
+            <article class="tarjeta-producto">
+                <img src="multimedia/imagenes/ds1_portada.jpg" alt="portada_ds1">
+                <h3>DARK SOULS Remastered</h3>
+                <p>Con la era de la llama y del hombre en su ocaso, vuelve a reanimarla con la version remastered de
+                    2018 para PC.</p>
+                <p>$40.00</p>
+            </article>
+            <article class="tarjeta-producto">
+                <img src="multimedia/imagenes/elden_portada.jpeg" alt="portada_elden">
+                <h3>Elden Ring</h3>
+                <p>Conviertete en la vasija de la tarea de la Voluntad Mayor y trae orden a las Tierras Intermedias, o
+                    envuelve el arbol aureo en las llamas freneticas y lleva al mundo a un nuevo punto de inflexion.</p>
+                <p>$60.00</p>
+            </article>
+            <article class="tarjeta-producto">
+                <img src="multimedia/imagenes/silksong_portada.jpg" alt="hk_silksong_portada">
+                <h3>Hollow Knight: Silksong</h3>
+                <p>Descubre los amplios paisajes de Pharloom en esta secuela esperada (luego de 8 largos años...) a
+                    traves de la descendiente de una raza antigua y poderosa, Hornet.</p>
+                <p>$7.00</p>
+            </article>
+            <article class="tarjeta-producto">
+                <img src="multimedia/imagenes/shados_of_erdtree_portada.jpg" alt="ershadow_portada">
+                <h3>Elden Ring: Shadows of the Erdtree</h3>
+                <p>El primer DLC que fue nominado como juego del año, explora el lado mas oscuro del universo de Elden
+                    Ring, con mas jefes, armas, y quests.
+                </p>
+                <p>$30.00</p>
+            </article>
+            <article class="tarjeta-producto">
+                <img src="multimedia/imagenes/minecraft_portada.jpg" alt="minecraft_portada">
+                <h3>Minecraft: Java + Bedrock Edition</h3>
+                <p>Deja volar tu imaginacion con el 2do juego mas vendido de la historia. Desde las cuevas mas profundas
+                    hasta dimensiones inexploradas, el limite lo pones tu.</p>
+                <p>$15.00</p>
+            </article>
+            <article class="tarjeta-producto">
+                <img src="multimedia/imagenes/isaac_portada.jpg" alt="isaac_portada">
+                <h3>The Binding of Isaac: Rebirth (BUNDLE!)</h3>
+                <p>Disfruta del bundle de The Binding of Isaac + Afterbirth + Afterbirth+ + Repentance.</p>
+                <p>$35.00</p>
+            </article>
+            <article class="tarjeta-producto">
+                <img src="multimedia/imagenes/terraria_portada.jpg" alt="terraria_portada">
+                <h3>Terraria</h3>
+                <p>Uno de los mejores juegos indies, con incontables horas de diversion y rejugabilidad, Terraria le
+                    ofrece a sus jugadores una extensa lista de armas, jefes y eventos, y un equilibrio con la esencia
+                    sandbox.</p>
+                <p>$12.00</p>
+            </article>
+            <article class="tarjeta-producto">
+                <img src="multimedia/imagenes/la_salamanca_portada.jpg" alt="la_salamanca_portada">
+                <h3>La Salamanca</h3>
+                <p>Juego de terror ambientado en la leyenda de "La salamanca", atrevete a descubrir la historia de uno
+                    de los ultimos productos nacionales en el genero terror.(🇦🇷)</p>
+                <p>$15.00</p>
+            </article>
+        </section>
     </main>
     <footer>
 
