--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -10,6 +10,27 @@
 
 <body>
     <header>
+        <div class="top-banner"></div>
+        <div class="banner">
+            <h1>Contanos tu opinion o reclamo!</h1>
+        </div>
+        <div class="bottom-banner">
+        </div>
+    </header>
+    <main class="contacto">
+        <section class="formulario">
+            <form action="https://formspree.io/f/xrbykzzk" method="POST">
+                <label>Tu email
+                    <input type="email" name="email" required>
+                </label>
+                <label>Mensaje
+                    <textarea name="message" rows="5" cols="30"></textarea>
+                </label>
+                <button type="submit">Enviar</button>
+            </form>
+        </section>
+    </main>
+    <footer>
         <nav>
             <ul class="nav-bar">
                 <li>
@@ -20,12 +41,6 @@
                 </li>
             </ul>
         </nav>
-    </header>
-    <main>
-
-    </main>
-    <footer>
-
     </footer>
 </body>
 
