Adicion de label Nombre para el form de contacto

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -20,6 +20,9 @@
     <main class="contacto">
         <section class="formulario">
             <form action="https://formspree.io/f/xrbykzzk" method="POST">
+                <label>Nombre
+                    <input for="nombre">
+                </label>
                 <label>Tu email
                     <input type="email" name="email" required>
                 </label>
