--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,18 +4,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet" />
     <link rel="stylesheet" href="../styles.css">
     <title>eShop</title>
 </head>
 
 <body>
-    <header>
-        <div class="top-banner"></div>
-        <div class="banner">
-            <h1>Contanos tu opinion o reclamo!</h1>
-        </div>
-        <div class="bottom-banner">
-        </div>
+    <header class="header">
+        <h1>Game-Key Shop</h1>
+        <nav>
+            <ul class="nav-bar">
+                <li>
+                    <a href="../index.html">Tienda</a>
+                </li>
+                <li>
+                    <a href="#">Contacto</a>
+                </li>
+                <li>
+                    <a href="carrito.html">&#128722;
+                        <span id="contador-carrito">0</span>
+                    </a>
+                </li>
+            </ul>
+        </nav>
     </header>
     <main class="contacto">
         <section class="formulario">
@@ -34,16 +48,6 @@
         </section>
     </main>
     <footer>
-        <nav>
-            <ul class="nav-bar">
-                <li>
-                    <a href="../index.html"><img src="../multimedia/iconos/carrito-de-compras.png" alt="home"></a>
-                </li>
-                <li>
-                    <a hred="#"><img src="../multimedia/iconos/usuario.png" alt="contacto"></a>
-                </li>
-            </ul>
-        </nav>
     </footer>
 </body>
 
