CAMBIO PARRAFO HOME

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
     </header>
     <main class="home">
         <h1>Tienda</h1>
-        <p class="parrafo-home">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima, similique numquam.
-            Adipisci possimus, porro
-            dolores quos, vel rerum cupiditate ipsa perferendis vero iusto in sapiente eius reiciendis? Ratione, ab vel.
+        <p class="parrafo-home">Bienvenido a Game-Key Shop, tu destino número uno para comprar claves de juegos
+            digitales. Ofrecemos una amplia selección de juegos para todas las plataformas a precios competitivos.
+            Explora nuestra tienda y encuentra las mejores ofertas en tus títulos favoritos.
         </p>
         <section class="productos">
             <div id="contenedor-tarjetas">
